@@ -1,6 +1,7 @@
 2015-05-21  Jean Delvare  <jdelvare@suse.de>
 
 	* dmidecode.c: Fix up invalid DMI type 34 structure length.
+	* dmioem.c: Decode HP-specific DMI types 212 and 219.
 
 2015-05-13  Jean Delvare  <jdelvare@suse.de>
 
